# Solemne-01-DA_AV

./: README.md  dockerfile  main.py  pyproject.toml  test_main.py
.github/workflows/: main.yml
