[project]
name = "fastapi-shoa"
version = "0.1.0"
description = "API con FastAPI que entrega hora actual usando NTP"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pytest",
    "ntplib",
    "httpx",
    "dateparser",
]

[tool.setuptools]
py-modules = ["main"]